tests/ui/async-await/issue-70594.stderr
error[E0728]: `await` is only allowed inside `async` functions and blocks
  --> $DIR/issue-70594.rs:4:12
   |
LL |     [1; ().await];
   |         ---^^^^^
   |         |  |
   |         |  only allowed inside `async` functions and blocks
   |         this is not `async`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0728`.
